--- a/pattern/src/Components/Home.css
+++ b/pattern/src/Components/Home.css
@@ -1,32 +1,84 @@
-.pokemon-container {
-    display: flex;
+/* .pokemon-container { */
+    /* display: grid;
+    grid-template-columns:[1fr, 20fr, 1fr];
+    grid-template-rows:[1fr, 2fr, 2fr, 1fr];
+    grid-template-areas:
+    ".arrow-container .prev-arrow .pokemon-image .arrow-container .next-arrow"
+    ".arrow-container .prev-arrow .pokemon-image .arrow-container .next-arrow"
+    ".arrow-container .prev-arrow .pokemon-image .arrow-container .next-arrow"
+    ".arrow-container .prev-arrow .pokemon-description .arrow-container .next-arrow";
     flex-direction: column;
     align-items: center;
-  }
-  
-  .pokemon-name {
+    border:10px solid black;
+    width:50vw;
+    margin-left:auto;
+    margin-right:auto;  } */
+/*     
+    .pokemon-container {
+        display: grid;
+        grid-template-columns: [1fr, 20fr, 1fr];
+        grid-template-rows: [1fr, 2fr, 2fr, 1fr];
+        grid-template-areas: 
+          "prev-arrow pokemon-image next-arrow"
+          "prev-arrow pokemon-image next-arrow"
+          "prev-arrow pokemon-image next-arrow"
+          "prev-arrow pokemon-description next-arrow";
+        border: 10px solid black;
+        width: 50vw;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+   */
+   .pokemon-container {
+    display: grid;
+    grid-template-columns: [1 fr, 20 fr, 1 fr];
+    grid-template-rows: [1 fr, 2 fr, 2 fr, 1 fr];
+    grid-template-areas: 
+      "prev-arrow pokemon-image next-arrow"
+      "prev-arrow pokemon-image next-arrow"
+      "prev-arrow pokemon-image next-arrow"
+      "prev-arrow pokemon-description next-arrow";
+    border: 10px solid black;
+    width: 50vw;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+  .pokemon-description{
     font-size: 24px;
     margin-top: 20px;
+    color:black;
+    border:10px solid red;
+
   }
-  
   .pokemon-image {
     width: 200px;
     height: 200px;
     margin-top: 20px;
+    border:10px solid green;
+
   }
   
-  .arrow-container {
+   .arrow-container {
     display: flex;
     margin-top: 20px;
+    border:10px solid purple;
+
   }
   
-  .arrow-container button {
-    font-size: 24px;
-    padding: 10px 20px;
-    cursor: pointer;
-  }
+ 
   
   .arrow-container .prev-arrow {
     margin-right: 20px;
+    border:10px solid yellow;
+
   }
-  
+
+  .arrow-container .next-arrow {
+    margin-right: 20px;
+    border:10px solid orangered;
+
+  }
+   
+   
