--- a/pattern/src/Components/Home.css
+++ b/pattern/src/Components/Home.css
@@ -1,44 +1,13 @@
-/* .pokemon-container { */
-    /* display: grid;
-    grid-template-columns:[1fr, 20fr, 1fr];
-    grid-template-rows:[1fr, 2fr, 2fr, 1fr];
-    grid-template-areas:
-    ".arrow-container .prev-arrow .pokemon-image .arrow-container .next-arrow"
-    ".arrow-container .prev-arrow .pokemon-image .arrow-container .next-arrow"
-    ".arrow-container .prev-arrow .pokemon-image .arrow-container .next-arrow"
-    ".arrow-container .prev-arrow .pokemon-description .arrow-container .next-arrow";
-    flex-direction: column;
-    align-items: center;
-    border:10px solid black;
-    width:50vw;
-    margin-left:auto;
-    margin-right:auto;  } */
-/*     
-    .pokemon-container {
-        display: grid;
-        grid-template-columns: [1fr, 20fr, 1fr];
-        grid-template-rows: [1fr, 2fr, 2fr, 1fr];
-        grid-template-areas: 
-          "prev-arrow pokemon-image next-arrow"
-          "prev-arrow pokemon-image next-arrow"
-          "prev-arrow pokemon-image next-arrow"
-          "prev-arrow pokemon-description next-arrow";
-        border: 10px solid black;
-        width: 50vw;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    
-   */
+
    .pokemon-container {
     display: grid;
-    grid-template-columns: [1 fr, 20 fr, 1 fr];
-    grid-template-rows: [1 fr, 2 fr, 2 fr, 1 fr];
-    grid-template-areas: 
-      "prev-arrow pokemon-image next-arrow"
-      "prev-arrow pokemon-image next-arrow"
-      "prev-arrow pokemon-image next-arrow"
-      "prev-arrow pokemon-description next-arrow";
+    grid-template-columns: 1fr 20fr 1fr;
+    grid-template-rows: 1fr 2fr 2fr 1fr;
+    grid-template-areas:
+    ".arrow-container.prev-arrow .pokemon-image .arrow-container.next-arrow"
+    ".arrow-container.prev-arrow .pokemon-image .arrow-container.next-arrow"
+    ".arrow-container.prev-arrow .pokemon-image .arrow-container.next-arrow"
+    ".arrow-container.prev-arrow .pokemon-description .arrow-container.next-arrow";
     border: 10px solid black;
     width: 50vw;
     margin-left: auto;
@@ -57,6 +26,8 @@
     height: 200px;
     margin-top: 20px;
     border:10px solid green;
+    justify-self: center;
+  align-self: center;
 
   }
   
@@ -66,8 +37,7 @@
     border:10px solid purple;
 
   }
-  
- 
+
   
   .arrow-container .prev-arrow {
     margin-right: 20px;
