--- a/pattern/src/Components/Home.css
+++ b/pattern/src/Components/Home.css
@@ -2,53 +2,43 @@
    .pokemon-container {
     display: grid;
     grid-template-columns: 1fr 20fr 1fr;
-    grid-template-rows: 1fr 2fr 2fr 1fr;
-    grid-template-areas:
-    ".arrow-container.prev-arrow .pokemon-image .arrow-container.next-arrow"
-    ".arrow-container.prev-arrow .pokemon-image .arrow-container.next-arrow"
-    ".arrow-container.prev-arrow .pokemon-image .arrow-container.next-arrow"
-    ".arrow-container.prev-arrow .pokemon-description .arrow-container.next-arrow";
-    border: 10px solid black;
+    grid-template-rows: 1fr 2fr 2fr 1fr; 
+    border: 5px solid rgb(38, 37, 37);
     width: 50vw;
     margin-left: auto;
     margin-right: auto;
 }
 
   .pokemon-description{
-    font-size: 24px;
+    font-size: 2vw;
     margin-top: 20px;
     color:black;
-    border:10px solid red;
-
+    grid-column:2;
+    text-align:center;
+    grid-row:4;
   }
+
   .pokemon-image {
-    width: 200px;
-    height: 200px;
-    margin-top: 20px;
-    border:10px solid green;
     justify-self: center;
-  align-self: center;
-
-  }
-  
-   .arrow-container {
-    display: flex;
     margin-top: 20px;
-    border:10px solid purple;
-
+    grid-column: 2;
+    grid-row: 1/4;
+    align-self: center;
+    height:20vw;
   }
-
   
-  .arrow-container .prev-arrow {
-    margin-right: 20px;
-    border:10px solid yellow;
-
+  .prev-arrow {
+    grid-column:1;
+    grid-row:1/5;
+    background: rgb(38, 37, 37);
+    color:white;
   }
 
-  .arrow-container .next-arrow {
-    margin-right: 20px;
-    border:10px solid orangered;
-
+.next-arrow {
+    grid-column:3;
+    grid-row:1/5;
+    background: rgb(38, 37, 37);
+    color:white;
   }
    
    
